# arcdps_bridge

./: .clang-format  .gitignore  .gitmodules  ApplicationData.cpp  CMakeLists.txt  Entry.cpp  LICENSE  PipeHandler.cpp  PipeThread.cpp  PipeThread.hpp  PlayerContainer.hpp  README.md  appveyor.yml  bridge.cpp
docs/: Combat.md  Connecting.md  Events.md  Extras.md  README.md  Squad.md
examples/: client.cs  client.py
src/: ApplicationData.cpp  ApplicationData.hpp  Combat.cpp  Combat.hpp  Entry.cpp  Extras.cpp  Extras.hpp  Log.cpp  Log.hpp  Message.hpp  PipeHandler.cpp  PipeHandler.hpp  PipeThread.cpp  PipeThread.hpp  PlayerContainer.cpp  PlayerContainer.hpp  SquadModifyHandler.hpp
tests/: AppDataTest.cpp  CMakeLists.txt  CombatTest.cpp  ExtrasTest.cpp  FuzzHelper.hpp  MessageTest.cpp  SquadTest.cpp
